Fix for bug 404320 (FormatBlock doesn't work correctly will break existing Midas implementations). r/sr=jst, a=beltzner.